--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body{
 }
     #introDiv{
         background-image: url("images/congruent_pentagon.png");
-        width: 96%;
+        width: 98%;
         min-height: 30px;
-        margin-left: 2%;
+        margin-left: 1%;
         margin-top: 2%;
 
         text-align: center;
@@ -38,22 +38,22 @@ body{
 }
 
     #firstInputDiv{
-        width: 45%;
-        min-height: 300px;
+        width: 98%;
+        min-height: 200px;
         background-color: cyan;
-        margin-left: 10%;
+        margin-left: 1%;
         padding-left: 10px;
         background-image: url('images/74674F.png');
         background-size: cover;
     }
-    #secondInputDiv{
+    /* #secondInputDiv{
         width: 30%;
         min-height: 300px;
         background-color: cyan;
         margin-left: 5%;
         background-image: url('images/wp5787008.jpg');
         background-size: cover;
-    }
+    } */
 
 
 p{
@@ -62,10 +62,10 @@ p{
 }
 
 #name, #points, #status{
-    width: 200px;
-    height: 30px;
+    width: 170px;
+    height: 25px;
     text-align: center;
-    font-size: 15px;
+    font-size: 12px;
 }
 #status{
     width: 208px;
@@ -78,7 +78,7 @@ p{
 #namepara, #pointpara, #statuspara{
     color:white;
    font-family:sans-serif;
-    font-size:15px ;
+    font-size:12px ;
     
 
 }
@@ -96,7 +96,7 @@ p{
     display: flex;
     
 }
-
+/* 
     #showcaseDiv1{
         width: 30%;
         margin-left: 10%;
@@ -105,19 +105,19 @@ p{
         background-image: url("images/32b26832c0f9dc19b6b7c70dfd66f0be.jpg");
         background-size: cover;
 
-    }
+    } */
     
     
     #showcaseDiv2{
-        width: 45.5%;
-        min-height: 250px;
+        width: 98%;
+        min-height: 200px;
         background-color: cyan;
-        margin-left: 5%;
+        margin-left: 1%;
         background-image: url("images/wallpapersden.com_pubg-key-art_1920x1080.jpg");
         background-size: cover;
         display: flex;
         justify-content: center;
-        padding-top: 2%;
+        padding-top: 1%;
         padding-bottom: 1%;
         
         
@@ -131,74 +131,75 @@ p{
 
 
 #analyzeDiv{
-    width: 80%;
+    width: 98%;
     height: 100px;
     /* background-color: cyan; */
-    margin-top:  5%;
-    margin-left: 10%;
+    margin-top:  1%;
+    margin-left: 1%;
    
     
 
 }
 
     #analyze{
-        width: 200px;
-        height: 70px;
-        margin-left: 35%;
+        width: 100px;
+        height: 50px;
+        margin-left: 20%;
         background-color: rgb(101, 160, 6);
         color:white;
-        font-size: 17px;
+        font-size: 15px;
         font-family: cursive;
     }
 
 
 #outputSection1{
-    display: flex;
+    display:block;
     margin-top: 3%;
    
 }
 
         #firstDivOfOutput1{
-            width: 37.5%;
-            min-height: 200px;
+            width:98%;
+            min-height: 100px;
             background-color: cyan;
-            margin-left: 10%;
+            margin-left: 1%;
             background-image: url("images/tileable_wood_texture.png");
             color: Black;
             text-align: center;
             display: flex;
             justify-content: center;
-            padding-top: 5%;
+            padding-top: 2%;
            
 
         }
 
 
         #secondDivOfOutput1{
-            width: 37.5%;
-            min-height: 200px;
+            width:98%;
+            min-height: 100px;
             background-color: cyan;
-            margin-left: 5%;
+            margin-left: 1%;
             background-image: url("images/tileable_wood_texture.png");
             color: Black;
             text-align: center;
             display: flex;
             justify-content: center;
-            padding-top: 5%;
+            padding-top: 2%;
+           
         }       
 
 #top13Div{
-    width: 80%;
-    min-height: 600px;
+    width: 98%;
+    min-height: 300px;
     background-color: cyan;
     margin-top: 5%;
-    margin-left: 10%;
+    margin-left: 1%;
     text-align: center;
     background-image: url("images/wallpapersden.com_pubg-key-art_1920x1080.jpg");
     background-size: cover;
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content:center;
+    align-items:center;
     
 }
         #caption{
@@ -211,8 +212,8 @@ p{
            color: white;
         }
         #tableDiv{
-            width: 60%;
-            height: 350px;
+            width: 80%;
+            height: 300px;
             /* background-color: cyan; */
             color:black;
             display: flex;
