--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body{
         min-height: 200px;
         background-color: cyan;
         margin-left: 1%;
+        margin-right: 1%;
         padding-left: 10px;
         background-image: url('images/74674F.png');
         background-size: cover;
@@ -68,8 +69,8 @@ p{
     font-size: 12px;
 }
 #status{
-    width: 208px;
-    height: 36px;
+    width: 178px;
+    height: 33px;
     text-align: center;
 }
 
@@ -144,7 +145,7 @@ p{
     #analyze{
         width: 100px;
         height: 50px;
-        margin-left: 20%;
+        margin-left: 30%;
         background-color: rgb(101, 160, 6);
         color:white;
         font-size: 15px;
@@ -202,28 +203,33 @@ p{
     align-items:center;
     
 }
-        #caption{
+        /* #caption{
             width: 300px;
             height: 100px;
             font-family:fantasy;
             /* background-color: cyan; */
-           margin-bottom: 40%;
+           /* margin-bottom: 40%;
            text-align: center;
            color: white;
-        }
+        } */ */
+
         #tableDiv{
             width: 80%;
             height: 300px;
+            margin-top: 2%;
             /* background-color: cyan; */
             color:black;
             display: flex;
             justify-content: center;
+
+
             
             
         }
                 table, th, td {
                     border: 1px solid white;
                     color: Black;
+                    font-size: 12px;
                 }
                 table{
                     width: 80%;
