--- a/style.css
+++ b/style.css
@@ -1,251 +1,116 @@
 body{
-    background-image: url("images/wheat.png");
-}
-
-#introSection{
-    display: flex;
-    /* background-color: cyan; */
-    padding-bottom: 5%;
-}
-    #introDiv{
-        background-image: url("images/congruent_pentagon.png");
-        width: 98%;
-        min-height: 30px;
-        margin-left: 1%;
-        margin-top: 2%;
-
-        text-align: center;
-        padding-top: 5px;
-        color:crimson;
-        font-size:medium;
-        font-family:cursive;
-    }
-
-
-/* 
-    #logoDiv{
-        background-image: url("images/b164fe1b8c2dff94eda4c8c7a0c423cc.jpg");
-        background-size: cover;
-        width: 15%;
-        min-height: 70px;
-        margin-top: 5%;
-        margin-left: 5%;
-    } */
-
-#inputSection{
-    display: flex;
-    padding-bottom: 5%;
-}
-
-    #firstInputDiv{
-        width: 98%;
-        min-height: 200px;
-        background-color: cyan;
-        margin-left: 1%;
-        margin-right: 1%;
-        padding-left: 10px;
-        background-image: url('images/74674F.png');
-        background-size: cover;
-    }
-    /* #secondInputDiv{
-        width: 30%;
-        min-height: 300px;
-        background-color: cyan;
-        margin-left: 5%;
-        background-image: url('images/wp5787008.jpg');
-        background-size: cover;
-    } */
-
-
-p{
-    margin-bottom: 0%;
+    margin: 0;
+    padding: 0;
+    background-image: url("wheat.png");
     
 }
 
-#name, #points, #status{
-    width: 170px;
-    height: 25px;
-    text-align: center;
-    font-size: 12px;
-}
-#status{
-    width: 178px;
-    height: 33px;
-    text-align: center;
-}
-
-
-
-#namepara, #pointpara, #statuspara{
-    color:white;
-   font-family:sans-serif;
-    font-size:12px ;
+#container {
+    width: 90%;
+    margin-left: 5%;
+    background-color:none;
+    height: 95vh;
+    padding-top: 2%;
+    font-family:sans-serif;
     
-
 }
 
-#inputbtn{
-    width: 80px;
-    height: 30px;
-    margin-left: 35%;
+    #inputdiv{
+        min-width: 80%;
+        min-height:30%;
+        padding-top: 3px;
+        padding-bottom: 10px;
+        background-color: brown;
+        margin-left:5% ;
+        margin-right: 5%;
+        background-image: url('congruent_pentagon.png');
+        
+        
+    }   
+
+
+                    #form p{
+                    color: #2f00ffe5;
+                    text-align: center;
+                    margin-bottom:3px;
+                    font-size: 20px;
+                    }
+
+
+
+
+                    .input{
+                        display: block;
+                        margin-left: 0;
+                        margin-right: 0;
+                        margin: auto;
+                        margin-bottom: 1vh;
+                        
+                        
+                    }
+
+                        #number{
+                            width: 40%;
+                            min-width: 200px;
+                            height:7vh;
+                            text-align: center;
+                            background-color: rgb(124, 0, 128);
+                            color: white;
+                            border: none;
+                            outline: none;
+                            border-radius: 5px;
+
+                        }
+                        #btn{
+                            min-width: 20%;
+                            height: 6vh;
+                            background-color: green;
+                            color: white;
+                            border: none;
+                            outline: none;
+                            border-radius: 5px;
+                        }
+                        #refresh{ 
+                            min-width: 20%;
+                            visibility: hidden;
+                            height: 6vh;
+                            background-color: red;
+                            color: white;
+                            border: none;
+                            outline: none;
+                            border-radius: 5px;
+                            
+                        }
+#outputdiv{
+    min-width: 80%;
+    min-height:45%;
+    background-color: brown;
+    margin-left:5% ;
+    margin-right: 5%;
     margin-top: 3%;
-    background-color: green;
-    color:white;
-}
-
-#showcaseSection{
-    display: flex;
-    
-}
-/* 
-    #showcaseDiv1{
-        width: 30%;
-        margin-left: 10%;
-        background-color: cyan;
-        min-height: 250px;
-        background-image: url("images/32b26832c0f9dc19b6b7c70dfd66f0be.jpg");
-        background-size: cover;
-
-    } */
-    
-    
-    #showcaseDiv2{
-        width: 98%;
-        min-height: 200px;
-        background-color: cyan;
-        margin-left: 1%;
-        background-image: url("images/wallpapersden.com_pubg-key-art_1920x1080.jpg");
-        background-size: cover;
-        display: flex;
-        justify-content: center;
-        padding-top: 1%;
-        padding-bottom: 1%;
-        
-        
-    }
-
-        #showcaseTable td {
-            text-align: center;
-        }
-
-
-
-
-#analyzeDiv{
-    width: 98%;
-    height: 100px;
-    /* background-color: cyan; */
-    margin-top:  1%;
-    margin-left: 1%;
-   
-    
-
-}
-
-    #analyze{
-        width: 200px;
-        height: 50px;
-        margin-left: 40%;
-        background-color: rgb(101, 160, 6);
-        color:white;
-        font-size: 15px;
-        font-family: cursive;
-    }
-
-
-#outputSection1{
-    display:block;
-    margin-top: 1%;
-   
-}
-
-        #firstDivOfOutput1{
-            width:98%;
-            min-height: 70px;
-            background-color: cyan;
-            margin-left: 1%;
-            background-image: url("images/tileable_wood_texture.png");
-            color: Black;
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            padding-top: 2%;
-           
-
-        }
-
-
-        #secondDivOfOutput1{
-            width:98%;
-            min-height: 120px;
-            background-color: cyan;
-            margin-left: 1%;
-            background-image: url("images/tileable_wood_texture.png");
-            color: Black;
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            padding-top: 0%;
-            margin-bottom: 5px;
-           
-        }       
-
-#top13Div{
-    width: 98%;
-    min-height: 300px;
-    background-color: cyan;
-    margin-top: 5%;
-    margin-left: 1%;
-    text-align: center;
-    background-image: url("images/wallpapersden.com_pubg-key-art_1920x1080.jpg");
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    padding-top: 1%;
-    padding-bottom: 1%;
-   
-
+    padding-top:2%;
+    padding-bottom: 5%;
+    background-image: url("weather.png");
+    color:green;
     
 }
 
 
-
-
-
-        /* #caption{
-            width: 300px;
-            height: 100px;
-            font-family:fantasy;
-            /* background-color: cyan; */
-           /* margin-bottom: 40%;
-           text-align: center;
-           color: white;
-        } */ 
-
-        /* #tableDiv{
-            width: 80%;
-            height: 300px;
-            margin-top: 2%; */
-            /* background-color: cyan; */
-            /* color:black;
-            display: flex;
-            justify-content: center;
-
-
+            #outputdiv h3{
+                text-align: center;
+                padding-top: 10px;
+                color: red;
             
+            }
+
+            #outputdiv > h3 b{
+                color: rgb(94, 8, 86);
+            }
             
-        } */
+            #outputdiv > p{
+                margin: 0%;
+                text-align: center;
+            }
 
 
 
-                table, th, td {
-                    border: 1px solid white;
-                    color: Black;
-                    font-size: 12px;
-                }
-                table{
-                    width: 80%;
-                    background-image: url("images/purty_wood.png");
-                   
-                }
-                
