Description and some styles have been changed.

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body{
     margin-top: 1%;
     padding-top:1%;
     padding-bottom: 1%;
-    background-image: url("congruent_pentagon.png");
+    background-image: url("weather.png");
     color:rgb(38, 0, 128);
     
 }
