color of the button is changed green to yellow

--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ body{
                         #btn{
                             min-width: 20%;
                             height: 6vh;
-                            background-color: green;
-                            color: white;
+                            background-color:yellow;
+                            color: black;
                             border: none;
                             outline: none;
                             border-radius: 5px;
